# langgraphfn

./: .gitignore  README.md  chatbot.db  pyproject.toml
0_sequential_workflows/: 0_bmi_workflow.ipynb  1_llmqa_workflow.ipynb  2_prompt_chaining.ipynb
1_parallel_workflows/: 0_batsman_workflow.ipynb  1_upsc_essay_workflow.ipynb
2_conditional_workflows/: 0_quadratic_equation_workflow.ipynb  1_review_reply_workflow.ipynb
3_iterative_workflows/: x_post_generator_workflow.ipynb
4_chatbot/: 0_basic_chatbot.ipynb
5_persistence/: 0_joke_workflow.ipynb
6_chatbot_with_ui/: backend.py  frontend.py  frontend1.py  frontend2.py  notes.md
7_mcp_client/: client.py
